--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "server": "json-server --watch server/data.json --port 3333"
+    "preview": "vite preview"    
   },
   "dependencies": {
     "json-server": "^0.17.1",
